# library

./: Readme.md  add_data.py  init.sql
app/: database.py  dependencies.py  main.py  pyproject.toml  security.py
app/routers/: auth.py  books.py  borrows.py  users.py
web/: package.json  pnpm-lock.yaml
web/src/components/advanced/: table-header-operation.vue
web/src/layouts/modules/global-footer/: index.vue
web/src/locales/langs/: zh-cn.ts
web/src/router/elegant/: imports.ts  routes.ts  transform.ts
web/src/router/routes/: index.ts
web/src/service-alova/request/: index.ts
web/src/service/api/: auth.ts  route.ts  system-manage.ts
web/src/service/request/: index.ts
web/src/store/modules/auth/: index.ts
web/src/typings/: api.d.ts  components.d.ts  elegant-router.d.ts
web/src/views/_builtin/login/modules/: pwd-login.vue  register.vue
web/src/views/books/: index.vue
web/src/views/books/modules/: book-operate-drawer.vue
web/src/views/borrows/: index.vue
web/src/views/borrows/modules/: borrow-search.vue
web/src/views/home/: index.vue
web/src/views/home/modules/: card-data.vue  header-banner.vue
web/src/views/manage/book/: index.vue
web/src/views/manage/book/modules/: book-search.vue  menu-auth-modal.vue
web/src/views/manage/borrow/: index.vue
web/src/views/manage/borrow/modules/: borrow-operate-drawer.vue
web/src/views/manage/user/: index.vue
web/src/views/manage/user/modules/: user-operate-drawer.vue  user-search.vue
web/src/views/user-center/: index.vue
