[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "cryptography>=46.0.3",
    "fastapi[standard]>=0.120.0",
    "passlib>=1.7.4",
    "pydantic[email]>=2.12.3",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]
