[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "cryptography>=46.0.3",
    "fastapi[all]>=0.120.0",
    "httptools>=0.7.1",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "websockets>=15.0.1",
    "winuvloop>=0.2.0",
]
